--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/stroke_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/stroke_row.scss
@@ -30,7 +30,7 @@
         }
       }
       .stroke-width-input {
-        @extend .numeric-input-base;
+        @extend .input-base;
       }
     }
     .select-wrapper {
