--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
@@ -57,7 +57,7 @@
         border-radius: $br-0;
 
         .color-input {
-          @extend .numeric-input-base;
+          @extend .input-base;
           padding-left: $s-4;
           &:active,
           &:focus {
@@ -91,7 +91,7 @@
       border-radius: 0 $br-8 $br-8 0;
       padding-left: $s-8;
       .opacity-input {
-        @extend .numeric-input-base;
+        @extend .input-base;
         border-radius: 0 $br-8 $br-8 0;
         min-width: $s-28;
       }
