--- a/frontend/src/app/main/ui/components/select.scss
+++ b/frontend/src/app/main/ui/components/select.scss
@@ -7,12 +7,18 @@
 @import "refactor/common-refactor.scss";
 
 .custom-select {
+  @include titleTipography;
   position: relative;
   display: flex;
+  align-items: center;
   height: $s-32;
   width: 100%;
+  margin: 0;
   padding: $s-8;
   border-radius: $br-8;
+  background-color: var(--menu-background-color);
+  border: $s-1 solid var(--menu-background-color);
+  color: var(--menu-foreground-color);
   cursor: pointer;
   .current-label {
     width: 100%;
@@ -39,19 +45,22 @@
     border-radius: $br-8;
     z-index: $z-index-3;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: var(--menu-background-color);
+    color: var(--menu-foreground-color);
     .separator {
       margin: 0;
       height: $s-12;
     }
   }
   .checked-element {
+    @include titleTipography;
     display: flex;
     align-items: center;
     height: $s-32;
     padding: 0 $s-8;
     border-radius: $br-6;
-    color: var(--menu-foreground-color);
+    color: var(--menu-foreground-color-rest);
     .label {
       flex-grow: 1;
       width: 100%;
@@ -67,6 +76,7 @@
     }
 
     &.is-selected {
+      color: var(--menu-foreground-color);
       .check-icon svg {
         stroke: var(--menu-foreground-color);
         visibility: visible;
@@ -74,19 +84,34 @@
     }
     &:hover {
       background-color: var(--menu-background-color-hover);
-      color: var(--menu-foreground-color-hover);
+      color: var(--menu-foreground-color);
       .check-icon svg {
-        stroke: var(--menu-foreground-color-hover);
+        stroke: var(--menu-foreground-color);
       }
     }
   }
 
   &:hover {
+    background-color: var(--menu-background-color-hover);
+    border: $s-1 solid var(--menu-background-color-hover);
     .dropdown-button {
-      color: var(--menu-foreground-color-hover);
       svg {
         stroke: var(--menu-foreground-color-hover);
       }
+    }
+  }
+  &:focus {
+    background-color: var(--menu-background-color-focus);
+    border: $s-1 solid var(--menu-border-color-focus);
+  }
+  &.disabled {
+    background-color: var(--menu-background-color-disabled);
+    color: var(--menu-foreground-color-disabled);
+    border: $s-1 solid var(--menu-border-color-disabled);
+    pointer-events: none;
+    cursor: default;
+    .dropdown-button svg {
+      stroke: var(--menu-foreground-color-disabled);
     }
   }
 }
