--- a/frontend/resources/styles/common/refactor/basic-rules.scss
+++ b/frontend/resources/styles/common/refactor/basic-rules.scss
@@ -4,6 +4,36 @@
 //
 // Copyright (c) KALEIDOS INC
 
+// SCROLLBAR
+.new-scrollbar {
+  ::-webkit-scrollbar {
+    background-color: transparent;
+    cursor: pointer;
+    height: $s-12;
+    width: $s-12;
+  }
+  ::-webkit-scrollbar-track,
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(170, 181, 186, 0.3);
+    background-clip: content-box;
+    border: $s-2 solid transparent;
+    border-radius: $br-8;
+    &:hover {
+      background-color: rgba(170, 181, 186, 0.7);
+      outline: none;
+    }
+  }
+
+  ::selection {
+    background-color: var(--color-accent-primary-muted);
+  }
+}
+
+// BUTTONS
 .button-primary {
   @include buttonStyle;
   @include flexCenter;
@@ -250,14 +280,100 @@
   }
 }
 
-.link {
-  background: unset;
-  border: none;
-  color: var(--link-foreground-color);
-  cursor: pointer;
-  text-decoration: none;
+// INPUTS
+
+.input-base {
+  @include removeInputStyle;
+  @include titleTipography;
+  height: $s-28;
+  width: 100%;
+  margin: $s-2 0;
+  color: var(--input-foreground-color-active);
+  &:focus-within,
+  &:active {
+    color: var(--input-foreground-color-active);
+    background-color: var(--input-background-color-active);
+  }
 }
 
+.input-icon {
+  @include flexCenter;
+  min-width: $s-12;
+  height: $s-32;
+  margin-right: $s-4;
+  svg {
+    @extend .button-icon;
+  }
+}
+
+.input-label {
+  @include tabTitleTipography;
+  @include flexCenter;
+  min-width: $s-12;
+  height: $s-32;
+  margin-right: $s-4;
+  color: var(--input-foreground-color);
+}
+
+.input-element {
+  @include titleTipography;
+  display: flex;
+  align-items: center;
+  height: $s-32;
+  padding: 0 $s-4;
+  border-radius: $br-8;
+  background-color: var(--input-background-color);
+  border: $s-1 solid var(--input-background-color);
+  color: var(--input-foreground-color);
+  span {
+    @extend .input-label;
+    svg {
+      @extend .button-icon;
+      stroke: var(--input-foreground-color);
+    }
+  }
+
+  input {
+    @extend .input-base;
+  }
+  ::placeholder {
+    color: var(--input-placeholder-color);
+  }
+  &:hover {
+    span {
+      color: var(--input-foreground-color);
+    }
+    input {
+      color: var(--input-foreground-color-active);
+    }
+    background-color: var(--input-background-color-hover);
+  }
+
+  &:focus-within,
+  &:active {
+    input {
+      color: var(--input-foreground-color-active);
+    }
+    background-color: var(--input-background-color-active);
+    border: $s-1 solid var(--input-border-color-active);
+  }
+}
+
+.disabled-input {
+  background-color: var(--input-background-color-disabled);
+  border: 1px solid var(--input-border-color-disabled);
+  color: var(--input-foreground-color-disabled);
+  input {
+    pointer-events: none;
+    cursor: default;
+    color: var(--input-foreground-color-disabled);
+  }
+  span svg {
+    stroke: var(--input-foreground-color-disabled);
+  }
+}
+
+// UI ELEMENTS
 .asset-element {
   @include titleTipography;
   display: flex;
@@ -271,110 +387,6 @@
   &:focus-within {
     background-color: var(--assets-item-background-color-hover);
     color: var(--assets-item-name-foreground-color-hover);
-  }
-}
-
-.input-element {
-  @include titleTipography;
-  display: flex;
-  align-items: center;
-  height: $s-32;
-  border-radius: $br-8;
-  background-color: var(--input-background-color);
-  color: var(--input-foreground-color);
-  span {
-    color: var(--input-foreground-color);
-    svg {
-      stroke: var(--input-foreground-color);
-    }
-  }
-
-  input {
-    @include removeInputStyle;
-    @include titleTipography;
-    color: var(--input-foreground-color);
-    height: $s-32;
-  }
-  ::placeholder {
-    color: var(--input-placeholder-color);
-  }
-  &:hover,
-  &:focus-within {
-    span {
-      color: var(--input-foreground-color);
-    }
-    input {
-      color: var(--input-foreground-color-active);
-    }
-    background-color: var(--input-background-color-hover);
-  }
-}
-
-.input-base {
-  @include removeInputStyle;
-  @include titleTipography;
-  height: $s-32;
-  width: 100%;
-  margin: 0;
-  color: var(--input-foreground-color-active);
-}
-
-.input-icon {
-  @include flexCenter;
-  width: $s-12;
-  height: $s-32;
-  margin-right: $s-4;
-}
-
-.new-scrollbar {
-  ::-webkit-scrollbar {
-    background-color: transparent;
-    cursor: pointer;
-    height: $s-12;
-    width: $s-12;
-  }
-  ::-webkit-scrollbar-track,
-  ::-webkit-scrollbar-corner {
-    background-color: transparent;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: rgba(170, 181, 186, 0.3);
-    background-clip: content-box;
-    border: $s-2 solid transparent;
-    border-radius: $br-8;
-    &:hover {
-      background-color: rgba(170, 181, 186, 0.7);
-      outline: none;
-    }
-  }
-}
-
-.menu-dropdown {
-  @include menuShadow;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  gap: $s-4;
-  padding: $s-4;
-  border-radius: $br-8;
-  z-index: $z-index-10;
-  color: var(--title-foreground-color-hover);
-  background-color: var(--menu-background-color);
-}
-
-.menu-item {
-  @include titleTipography;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: $s-28;
-  width: 100%;
-  padding: $s-6;
-  border-radius: $br-8;
-  cursor: pointer;
-  &:hover {
-    background-color: var(--menu-background-color-hover);
   }
 }
 
@@ -415,4 +427,42 @@
   padding: $s-8;
   background-color: var(--input-background-color);
   color: var(--input-foreground-color-active);
+}
+
+.link {
+  background: unset;
+  border: none;
+  color: var(--link-foreground-color);
+  cursor: pointer;
+  text-decoration: none;
+}
+
+// SELECTS AND DROPDOWNS
+
+.menu-dropdown {
+  @include menuShadow;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: $s-4;
+  padding: $s-4;
+  border-radius: $br-8;
+  z-index: $z-index-10;
+  color: var(--title-foreground-color-hover);
+  background-color: var(--menu-background-color);
+}
+
+.menu-item {
+  @include titleTipography;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: $s-28;
+  width: 100%;
+  padding: $s-6;
+  border-radius: $br-8;
+  cursor: pointer;
+  &:hover {
+    background-color: var(--menu-background-color-hover);
+  }
 }
