--- a/frontend/resources/styles/common/refactor/spacing.scss
+++ b/frontend/resources/styles/common/refactor/spacing.scss
@@ -33,6 +33,7 @@ $s-80: calc(var(--s-4) * 20);
 $s-84: calc(var(--s-4) * 21);
 $s-92: calc(var(--s-4) * 23);
 $s-96: calc(var(--s-4) * 24);
+$s-100: calc(var(--s-4) * 25);
 $s-104: calc(var(--s-4) * 26);
 $s-108: calc(var(--s-4) * 27);
 $s-116: calc(var(--s-4) * 29);
@@ -46,6 +47,7 @@ $s-156: calc(var(--s-4) * 39);
 $s-152: calc(var(--s-4) * 38);
 $s-160: calc(var(--s-4) * 40);
 $s-168: calc(var(--s-4) * 42);
+$s-172: calc(var(--s-4) * 43);
 $s-180: calc(var(--s-4) * 45);
 $s-184: calc(var(--s-4) * 46);
 $s-188: calc(var(--s-4) * 47);
@@ -54,10 +56,12 @@ $s-196: calc(var(--s-4) * 49);
 $s-200: calc(var(--s-4) * 50);
 $s-216: calc(var(--s-4) * 54);
 $s-220: calc(var(--s-4) * 55);
+$s-228: calc(var(--s-4) * 57);
 $s-240: calc(var(--s-4) * 60);
 $s-248: calc(var(--s-4) * 62);
 $s-252: calc(var(--s-4) * 63);
 $s-256: calc(var(--s-4) * 64);
+$s-260: calc(var(--s-4) * 65);
 $s-272: calc(var(--s-4) * 68);
 $s-276: calc(var(--s-4) * 69);
 $s-280: calc(var(--s-4) * 70);
