--- a/frontend/src/app/main/ui/components/editable_select.scss
+++ b/frontend/src/app/main/ui/components/editable_select.scss
@@ -28,30 +28,14 @@
   }
 
   .custom-select-dropdown {
-    @include menuShadow;
-    position: absolute;
-    top: $s-32;
-    left: 0;
-    width: 100%;
+    @extend .dropdown-wrapper;
     max-height: $s-320;
-    padding: $s-2;
-    margin: 0;
-    margin-top: $s-4;
-    border-radius: $br-8;
-    z-index: $z-index-3;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background-color: var(--menu-background-color);
     .separator {
       margin: 0;
       height: $s-12;
     }
     .dropdown-element {
-      display: flex;
-      align-items: center;
-      height: $s-32;
-      padding: 0 $s-8;
-      border-radius: $br-6;
+      @extend .dropdown-element-base;
       color: var(--menu-foreground-color);
       .label {
         flex-grow: 1;
