--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
@@ -40,28 +40,11 @@
         }
       }
       .custom-select-dropdown {
-        @include menuShadow;
-        position: absolute;
-        top: $s-32;
-        left: 0;
+        @extend .dropdown-wrapper;
         width: $s-252;
-        max-height: $s-300;
-        padding: $s-2;
-        margin: 0;
-        margin-top: $s-4;
-        border-radius: $br-8;
-        z-index: $z-index-3;
-        overflow-y: auto;
-        background-color: var(--menu-background-color);
         .dropdown-element {
-          @include titleTipography;
-          display: flex;
-          align-items: center;
-          gap: $s-8;
-          height: $s-32;
-          padding: 0 $s-8;
-          border-radius: $br-6;
-          cursor: pointer;
+          @extend .dropdown-element-base;
+
           &.disabled {
             pointer-events: none;
             cursor: default;
